--- a/css/loginPage.css
+++ b/css/loginPage.css
@@ -13,31 +13,31 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-login {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
 }
-.form-signin .checkbox {
+.form-login .checkbox {
   font-weight: 400;
 }
-.form-signin .form-control {
+.form-login .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form-login .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="id"] {
+.form-login input[type="id"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.form-login input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -46,7 +46,7 @@ body {
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: center;
   width: 100%;
   min-height: 100%;
