--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -97,9 +97,7 @@
         url = $form.attr("action");
 
       // Send the data using post
-      var posting = $.post(url, {
-        term
-      });
+      var posting = $.post(url, {term});
     });
 
     $('#closePage').click(function () {
