--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="main.html">HIST 차량관리</a>
+      <a class="navbar-brand" href="main">HIST 차량관리</a>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item text-nowrap">
           <a class="nav-link" href="loginPage.html">로그아웃</a>
@@ -10,21 +10,38 @@
     </div>
   </nav>
 </header>
-
 <div class="container-fluid">
   <div class="row">
     <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="/history-input">사용내역 입력</a>
+          <a class="nav-link" routerLink="/history-input" (click)="clickFunc()"
+            [ngClass]="{'sample-b':(_router.url ==='/history-input'), 'sample-a': (_router.url !=='/history-input')}">사용내역
+            입력</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/history-search">사용내역 조회<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/history-search" (click)="clickFunc()"
+            [ngClass]="{'sample-b':(_router.url ==='/history-search'), 'sample-a': (_router.url !=='/history-search')}">사용내역
+            조회</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/car-management">차량관리</a>
+          <a class="nav-link" routerLink="/car-management" (click)="clickFunc()"
+            [ngClass]="{'sample-b':(_router.url ==='/car-management'), 'sample-a': (_router.url !=='/car-management')}">차량관리</a>
         </li>
       </ul>
+      <!-- <ul class="subMenus nav nav-pills flex-column">
+        <li (click)="activateMenu(subMenu)"
+            *ngfor="let subMenu of subMenus"
+            [ngClass]="{'active': subMenu.active}">
+          <a>{{ subMenu.name }}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/history-search">사용내역 조회</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/car-management">차량관리</a>
+        </li>
+      </ul> -->
     </nav>
   </div>
 </div>
