--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -15,18 +15,16 @@
     <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/history-input" (click)="clickFunc()"
-            [ngClass]="{'sample-b':(_router.url ==='/history-input'), 'sample-a': (_router.url !=='/history-input')}">사용내역
-            입력</a>
+          <a class="nav-link" routerLink="/history-input"
+          [ngClass]="{'sample-b':(_router.url ==='/history-input'), 'sample-a': (_router.url !=='/history-input')}">사용내역 입력</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/history-search" (click)="clickFunc()"
-            [ngClass]="{'sample-b':(_router.url ==='/history-search'), 'sample-a': (_router.url !=='/history-search')}">사용내역
-            조회</a>
+          <a class="nav-link" routerLink="/history-search"
+          [ngClass]="{'sample-b':(_router.url ==='/history-search'), 'sample-a': (_router.url !=='/history-search')}">사용내역 조회</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/car-management" (click)="clickFunc()"
-            [ngClass]="{'sample-b':(_router.url ==='/car-management'), 'sample-a': (_router.url !=='/car-management')}">차량관리</a>
+          <a class="nav-link" routerLink="/car-management"
+          [ngClass]="{'sample-b':(_router.url ==='/car-management'), 'sample-a': (_router.url !=='/car-management')}">차량관리</a>
         </li>
       </ul>
       <!-- <ul class="subMenus nav nav-pills flex-column">
