--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -1,4 +1,4 @@
-<main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+<div role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
   <h1>Fill in</h1>
   <form>
     <label for="datepicker" class="col-form-label">사용 일자</label>
@@ -81,9 +81,9 @@
     </div>
 
   </form>
-</main>
+</div>
 
-<script>
+<!-- <script>
   $('#saveInputData').click(function () {
     // Attach a submit handler to the form
     $("#inputForm").submit(function (event) {
@@ -106,4 +106,4 @@
 
   });
 
-</script>
+</script> -->
