--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -1,4 +1,4 @@
-<main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+<div role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
   <div class="d-flex bd-highlight">
     <div class="flex-grow-1 bd-highlight" style="padding-left: 0px;">
       <h1>Search</h1>
@@ -215,6 +215,8 @@
     </table>
   </div>
 
+  <br>
+  
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-end">
       <li class="page-item disabled">
@@ -228,16 +230,16 @@
       </li>
     </ul>
   </nav>
+
   <div class="row justify-content-center">
     <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
     <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
     <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
   </div>
+</div>
 
-</main>
-
-  <script src="./js/datepicker.js"></script>
-    <script>
+<script src="./js/datepicker.js"></script>
+    <!-- <script>
 
         var expectedData = [
             { no: 1, date: '2019-02-01', group: 'APP서비스그룹', driver: '손병철' },
@@ -386,4 +388,4 @@
                 row.append($("<td>" + rowData[i].xx + "</td > "));
             }
         }
-</script>
+</script> -->
