--- a/car-mng-app/src/app/app.component.css
+++ b/car-mng-app/src/app/app.component.css
@@ -2,15 +2,12 @@
  * Base structure
  */
 
-.sample-a {
-  background-color: #cdef8c;
-  height: 100px;
+.selected {
+  color: #fff;
+  background-color:#007bff;
+  padding: .5rem 1rem;
 }
 
-.sample-n {
-  background-color: black;
-  height: 10px;
-}
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
