--- a/car-mng-app/src/app/main/main.component.html
+++ b/car-mng-app/src/app/main/main.component.html
@@ -1,43 +1,3 @@
-<title>HIST 차량관리</title>
-
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="main">HIST 차량관리</a>
-      <ul class="navbar-nav navbar-right">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="loginPage">로그아웃</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
-
-<div class="container-fluid">
-  <div class="row">
-    <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="/history-input">사용내역 입력</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/history-search">사용내역 조회</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/car-management">차량관리</a>
-        </li>
-      </ul>
-    </nav>
-
-    <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-      <h1>Main</h1>
-    </main>
-
-  </div>
+<div role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+  <h1>Main</h1>
 </div>
-
-<!-- Bootstrap core JavaScript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-  crossorigin="anonymous"></script>
