로그인 페이지 및 기능 구현 전 ( ※ datepicker 를 angular 용으로 변경 혹은 개별 input 기능 형태로 변경 시 routerLinkActive 기능 활용 가능, 이 경우가 더 화면전환이 빠르고 깔끔함)

--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -15,6 +15,11 @@
     <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
+
+          <!-- <a class="nav-link" [routerLink]="['main']" [routerLinkActive]="['active']">test</a> -->
+          <!-- <a class="nav-link" routerLink="/history-input" routerLinkActive="active">사용내역 입력</a>
+        </li> -->
+
           <a class="nav-link" href="/history-input"
           [ngClass]="{'selected':(_router.url ==='/history-input'), 'unselected': (_router.url !=='/history-input')}">사용내역 입력</a>
         </li>
