--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -1,42 +1,53 @@
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/main">HIST 차량관리</a>
-      <ul class="navbar-nav navbar-right">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="/loginPage">로그아웃</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
-<div class="container-fluid">
-  <div class="row">
-    <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
+TODO: loading component 구현 및 적용 필요
+<!-- <app-loading></app-loading> -->
 
-          <!-- <a class="nav-link" [routerLink]="['main']" [routerLinkActive]="['active']">test</a> -->
-          <!-- <a class="nav-link" routerLink="/history-input" routerLinkActive="active">사용내역 입력</a>
-        </li> -->
+TODO: isLogin, isLogout 구현 및 적용 필요
 
-          <a class="nav-link" href="/history-input"
-          [ngClass]="{'selected':(_router.url ==='/history-input'), 'unselected': (_router.url !=='/history-input')}">사용내역 입력</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/history-search"
-          [ngClass]="{'selected':(_router.url ==='/history-search'), 'unselected': (_router.url !=='/history-search')}">사용내역 조회</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/car-management" role="button" aria-expanded="false"
-          [ngClass]="{'selected':(_router.url ==='/car-management'), 'unselected': (_router.url !=='/car-management')}">차량관리</a>
+<ng-container *ngIf="isLogin">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/main">HIST 차량관리</a>
+        <ul class="navbar-nav navbar-right">
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" href="/loginPage">로그아웃</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+
+            <!-- <a class="nav-link" [routerLink]="['main']" [routerLinkActive]="['active']">test</a> -->
+            <!-- <a class="nav-link" routerLink="/history-input" routerLinkActive="active">사용내역 입력</a>
+      </li> -->
+
+            <a class="nav-link" href="/history-input" [ngClass]="{'selected':(router.url ==='/history-input'), 'unselected': (router.url !=='/history-input')}">사용내역
+              입력</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/history-search" [ngClass]="{'selected':(router.url ==='/history-search'), 'unselected': (router.url !=='/history-search')}">사용내역
+              조회</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/car-management" role="button"
+              aria-expanded="false" [ngClass]="{'selected':(router.url ==='/car-management'), 'unselected': (router.url !=='/car-management')}">차량관리</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="/car-management">차량 정보조회</a>
               <a class="dropdown-item" href="/car-management">차량 등록/삭제</a>
             </div>
-        </li>
-      </ul>
-    </nav>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
+  <router-outlet></router-outlet>
+</ng-container>
+
+<div *ngIf="!isLogin">
+  <app-login></app-login>
 </div>
-<router-outlet></router-outlet>
