--- a/car-mng-app/src/app/auth/login/login.component.html
+++ b/car-mng-app/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper">
-  <form id="loginForm" class="form-login">
+<div id="login">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <img class="mb-4" src="/assets/images/hanjinCI.png" width="110" height="110" />
     <h1 class="h3 mb-3 font-weight-normal">HIST 차량관리</h1>
     <label for="inputID" class="sr-only">ID</label>
