기존 html 작업하던 file들 모두 삭제  //  헤더 nav bar 의 로그아웃 누르면 login page로 리다이렉션 되도록 변경  //  ngif 기능으로 로그인 페이지에서 상단 nav bar 및 좌측 사이드 nav bar 숨기는 것은 일단 미구현  //  로그인 페이지 css 수정 필요

--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -1,7 +1,7 @@
-TODO: loading component 구현 및 적용 필요
+<!-- TODO: loading component 구현 및 적용 필요 -->
 <!-- <app-loading></app-loading> -->
 
-TODO: isLogin, isLogout 구현 및 적용 필요
+<!-- TODO: isLogin, isLogout 구현 및 적용 필요 -->
 
 <!-- <ng-container *ngIf="isLogin"> -->
 <ng-container>
@@ -11,7 +11,7 @@ TODO: isLogin, isLogout 구현 및 적용 필요
         <a class="navbar-brand" href="/main">HIST 차량관리</a>
         <ul class="navbar-nav navbar-right">
           <li class="nav-item text-nowrap">
-            <a class="nav-link" href="/loginPage">로그아웃</a>
+            <a class="nav-link" href="/auth">로그아웃</a>
           </li>
         </ul>
       </div>
