--- a/car-mng-app/src/app/auth/login/login.component.css
+++ b/car-mng-app/src/app/auth/login/login.component.css
@@ -1,9 +1,14 @@
 .wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100%;
+  padding: 20px;
+  text-align: center;
   height: 100%;
   display: -ms-flexbox;
-  display: flex;
   -ms-flex-align: center;
-  align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
@@ -44,18 +49,17 @@
   border-top-right-radius: 0;
 }
 
-.wrapper {
+.footer {
   display: flex;
   align-items: center;
-  flex-direction: column;
   justify-content: center;
-  width: 100%;
-  min-height: 100%;
   padding: 20px;
   text-align: center;
+  display: -ms-flexbox;
+  -ms-flex-align: center;
 }
 
-#formFooter {
+#formfooter {
   padding: 10px;
   text-align: center;
 }
