--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -9,12 +9,7 @@
   </div>
 
   <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="selectCarNum" class="col-form-label">차량선택</label>
-      <select id="selectCarNum" class="form-control">
-      </select>
-    </div>
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-12">
       <label for="datepicker" class="col-form-label">사용 일자</label>
       <div style="display: flex;">
         <mat-form-field class="col-md-6" style="padding-left: 0px; padding-right: 0px">
@@ -31,10 +26,16 @@
       </div>
     </div>
   </div>
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <label for="selectCarNum" class="col-form-label">차량선택</label>
+      <select id="selectCarNum" class="form-control">
+      </select>
+    </div>
+  </div>
 
 
-
-      <!-- <div style="display: flex;">
+  <!-- <div style="display: flex;">
         <input type="text" class="datepicker form-control" id="fromDt">
         <span style="margin-top: 5px; font-weight: bold;">&nbsp;&nbsp;~&nbsp;&nbsp;</span>
         <input type="text" class="datepicker form-control" id="toDt">
@@ -232,7 +233,7 @@
   </div>
 
   <br>
-  
+
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-end">
       <li class="page-item disabled">
@@ -255,7 +256,7 @@
 </div>
 
 <script src="./js/datepicker.js"></script>
-    <!-- <script>
+<!-- <script>
 
         var expectedData = [
             { no: 1, date: '2019-02-01', group: 'APP서비스그룹', driver: '손병철' },
