--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -2,7 +2,7 @@
   <h1>Fill in</h1>
 
 
-    <!-- <label for="datepicker" class="col-form-label">사용 일자</label>
+  <!-- <label for="datepicker" class="col-form-label">사용 일자</label>
     <div class="form-group col-md-12">
     <div style="display: flex;">
     <mat-form-field class="col-md-6" style="padding-left: 0px; padding-right: 0px">
@@ -19,7 +19,7 @@
     </div>
     </div> -->
 
-<!-- 
+  <!-- 
     <label for="datepicker" class="col-form-label">사용 일자</label>
     <div class="form-group col-md-12" style="padding-left: 0px; padding-right: 0px">
       <div style="display: flex;">
@@ -29,94 +29,97 @@
       </div>
     </div> -->
 
-    <form action="/" id="inputForm">
+  <form action="/" id="inputForm">
 
-      <div class="form-row">
-        <label for="datepicker" class="col-form-label">사용 일자</label>
-        <div class="form-group col-md-12" style="display: flex;">
-          <mat-form-field class="col-md-6" style="padding-left: 0px; padding-right: 0px">
-            <input matInput [matDatepicker]="picker1" placeholder="시작일" [value]="date.value">
-            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-          </mat-form-field>
-          <span style="margin-top: 20px; font-weight: bold;">&nbsp;&nbsp;~&nbsp;&nbsp;</span>
-          <mat-form-field class="col-md-6" style="padding-left: 0px; padding-right: 25px">
-            <input matInput [matDatepicker]="picker2" placeholder="종료일" [value]="date.value">
-            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-            <mat-datepicker #picker2></mat-datepicker>
-          </mat-form-field>
-        </div>
+    <div class="form-row">
+      <label for="datepicker" class="col-form-label">사용 일자</label>
+      <div class="form-group col-md-12" style="display: flex;">
+        <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 0px"
+          [ngStyle]="{'font-size.px': 14}">
+          <input matInput [matDatepicker]="picker1" placeholder="시작일">
+          <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
+        </mat-form-field>
+        <span style="margin-top: 20px; font-weight: bold;">&nbsp;&nbsp;~&nbsp;&nbsp;</span>
+        <mat-form-field class="col-md-6" style="padding-left: 0px; padding-right: 25px">
+          <input matInput [matDatepicker]="picker2" placeholder="종료일">
+          <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+          <mat-datepicker #picker2></mat-datepicker>
+        </mat-form-field>
       </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="selectCarNum" class="col-form-label">차량선택</label>
-          <select id="selectCarNum" class="form-control">
-            <option selected>12하1234 (소렌토)</option>
-            <option>56하7890 (아반떼)</option>
-            <option>...</option>
-          </select>
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputDpt" class="col-form-label">소속명</label>
-          <input type="text" class="form-control" placeholder="소속명">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputName" class="col-form-label">성명</label>
-          <input type="text" class="form-control" placeholder="성명">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="selectUseType" class="col-form-label">사용형태</label>
-          <select id="selectUseType" class="form-control">
-            <option selected>업무용</option>
-            <option>비업무용</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="selectPurpose" class="col-form-label">사용유형</label>
-          <select id="selectPurpose" class="form-control">
-            <option selected>제조, 판매시설 등 해당 법인의 사업장 방문</option>
-            <option>거래처, 대리점 방문</option>
-            <option>회의 참석</option>
-            <option>판촉 활동</option>
-            <option>출, 퇴근</option>
-            <option>교육, 훈련 등 기타 위에서 정하지 않은 업무 사용 목적</option>
-            <option>비업무용</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="form-group width: 100%">
-        <label for="inputPurposeText">사용목적 기입</label>
-        <textarea class="form-control" id="inputPurposeText" rows="3"></textarea>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-3">
-          <label for="inputDestination" class="col-form-label">목적지</label>
-          <input id="destination" type="text" class="form-control" placeholder="목적지">
-        </div>
-        <div class="form-group col-md-3">
-          <label for="inputStopover" class="col-form-label">경유지</label>
-          <input type="text" class="form-control" placeholder="경유지">
-        </div>
-        <div class="form-group col-md-3">
-          <label for="inputKM" class="col-form-label">주행거리</label>
-          <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"><span style="margin-top: 5px;">KM</span></span>
-        </div>
-        <div class="form-group col-md-3">
-          <label for="inputRefuel" class="col-form-label">주유량</label>
-          <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"><span style="margin-top: 5px;">L</span></span>
-        </div>
-      </div>
-    </form>
-
-    <div class="row justify-content-center">
-      <button id="saveInputData" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">입력 완료</button>
-      <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
     </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <label for="selectCarNum" class="col-form-label">차량선택</label>
+        <select id="selectCarNum" class="form-control">
+          <option selected>12하1234 (소렌토)</option>
+          <option>56하7890 (아반떼)</option>
+          <option>...</option>
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputDpt" class="col-form-label">소속명</label>
+        <input type="text" class="form-control" placeholder="소속명">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputName" class="col-form-label">성명</label>
+        <input type="text" class="form-control" placeholder="성명">
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="selectUseType" class="col-form-label">사용형태</label>
+        <select id="selectUseType" class="form-control">
+          <option selected>업무용</option>
+          <option>비업무용</option>
+        </select>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="selectPurpose" class="col-form-label">사용유형</label>
+        <select id="selectPurpose" class="form-control">
+          <option selected>제조, 판매시설 등 해당 법인의 사업장 방문</option>
+          <option>거래처, 대리점 방문</option>
+          <option>회의 참석</option>
+          <option>판촉 활동</option>
+          <option>출, 퇴근</option>
+          <option>교육, 훈련 등 기타 위에서 정하지 않은 업무 사용 목적</option>
+          <option>비업무용</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group width: 100%">
+      <label for="inputPurposeText">사용목적 기입</label>
+      <textarea class="form-control" id="inputPurposeText" rows="3"></textarea>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-3">
+        <label for="inputDestination" class="col-form-label">목적지</label>
+        <input id="destination" type="text" class="form-control" placeholder="목적지">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputStopover" class="col-form-label">경유지</label>
+        <input type="text" class="form-control" placeholder="경유지">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputKM" class="col-form-label">주행거리</label>
+        <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"><span
+            style="margin-top: 5px;">KM</span></span>
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputRefuel" class="col-form-label">주유량</label>
+        <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"><span
+            style="margin-top: 5px;">L</span></span>
+      </div>
+    </div>
+  </form>
+
+  <div class="row justify-content-center">
+    <button id="saveInputData" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">입력 완료</button>
+    <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
+  </div>
 
 </div>
 
