--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -15,7 +15,8 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 0px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>시작일</mat-label>
-          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD">
+          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" [(ngModel)]="record.dateFrom"
+            name="dateFrom">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
@@ -23,7 +24,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 30px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>종료일</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD">
+          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" [(ngModel)]="record.dateTo" name="dateTo">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
@@ -33,7 +34,7 @@
   <div class="form-row">
     <div class="form-group col-md-12">
       <label for="selectCarNum" class="col-form-label">차량선택</label>
-      <select id="selectCarNum" class="form-control">
+      <select id="selectCarNum" class="form-control" [(ngModel)]="record.selectedCar" name="selectedCar">
       </select>
     </div>
   </div>
@@ -42,9 +43,28 @@
   <div class="mat-elevation-z8" style="margin-top: 20px;">
     <table mat-table [dataSource]="dataSource" style="width: 100%;">
 
-      <ng-container matColumnDef="useDate">
-        <th mat-header-cell *matHeaderCellDef> 사용일자 </th>
-        <td mat-cell *matCellDef="let element"> {{element.useDate}} </td>
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dateFrom">
+        <th mat-header-cell *matHeaderCellDef> 사용일자(시작일) </th>
+        <td mat-cell *matCellDef="let element"> {{element.dateFrom}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dateTo">
+        <th mat-header-cell *matHeaderCellDef> 사용일자(종료일) </th>
+        <td mat-cell *matCellDef="let element"> {{element.dateTo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="driverDep">
