오류 무시하고 일단 기능구현 시작 전 커밋

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -28,7 +28,7 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <label for="selectCarNum" class="col-form-label">차량선택</label>
-        <select id="selectCarNum" class="form-control" [(ngModel)]="record.selectedCar" name="selectedCar">
+        <select id="selectCarNum" class="form-control" [(ngModel)]="record.histCar" name="histCar">
           <option *ngFor="let car of carList" [value]="car.key">
             {{car.value}}
           </option>
