--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -34,7 +34,7 @@
   <div class="form-row">
     <div class="form-group col-md-12">
       <label for="selectCarNum" class="col-form-label">차량선택</label>
-      <select id="selectCarNum" class="form-control" [(ngModel)]="record.selectedCar" name="selectedCar">
+      <select id="selectCarNum" class="form-control" [(ngModel)]="record.histCar" name="histCar">
       </select>
     </div>
   </div>
